# IBelieveICanFlyPy

./: README.md  pyproject.toml  requirements.txt
data/models/: naive_bayes_flight_delay.pkl  naive_bayes_flight_delay_metadata.json
data/models/benchmarks/: lightgbm_feature_importance_nb.csv  lightgbm_random.json
setup/: clean_flights.py  convert_data_format.py  format_code.sh  naive_bayes_flight.py
src/etl/: data_cleaning.py  feature_engineering.py
src/models/: lightgbm_benchmark.py  naive_bayes_benchmarks.py  naive_bayes_pipeline.py
src/utils/: config.py
